docs: Rewrite README with Docker Compose as primary deployment method
- Move Docker Compose deployment to Quick Start section
- Add clear step-by-step instructions for building and deploying
- Document all three services (CouchDB, Solr, Core) with ports
- Add Keycloak section for SAML/OIDC authentication
- Move Jetty development environment to secondary section
- Add project structure and technical stack tables
- Simplify and modernize overall documentation

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>