@@ -3,132 +3,191 @@
 NemakiWare is an open source Enterprise Content Management system, compliant with CMIS ver1.1.
 
 ## Features
-- **All-in-one package** including server, full-text search engine, and modern React client
-- **Docker-based deployment** with simple Docker Compose setup
-- **Jakarta EE 10 compatible** with Java 17 support
-- **Modern React SPA client interface** with TypeScript and Vite
-- **SAML and OIDC authentication** support
-- **Full CMIS 1.1 compliance**
+- **All-in-one package** including CMIS server, full-text search engine, and modern React client
+- **Docker Compose deployment** with CouchDB, Solr, and Tomcat
+- **Jakarta EE 10 compatible** with Java 17
+- **Modern React SPA UI** with TypeScript, Vite 7, and Ant Design 5
+- **SAML and OIDC authentication** support (via Keycloak)
+- **Full CMIS 1.1 compliance** verified with Apache Chemistry TCK
 
 ## Key Capabilities
-* **CMIS ver1.1 compliant and even CMIS-native server**
-    * Easy Integration or replacement with other existing/future CMIS-compliant client.
-    * Extended feature out of CMIS specification: user/group, archive etc.
-    * Highly customizable in CMIS specification because of CMIS-native development.
 
-* **Enhanced Full-Text Search**: Apache Solr with ExtractingRequestHandler (Solr Cell)
-    * PDF documents: Complete text extraction with metadata
-    * Microsoft Office: Word (.docx/.doc), Excel (.xlsx/.xls), PowerPoint (.pptx/.ppt)
-    * OpenDocument: Writer (.odt), Calc (.ods), Impress (.odp)
-    * Web formats: HTML, XML, RTF, plain text
-    * **Quick Verification**: `./quick-verify-extracting.sh`
-    * **Full Verification**: `./verify-extracting-handler.sh`
+* **CMIS ver1.1 compliant and CMIS-native server**
+    * Easy integration with any CMIS-compliant client
+    * Extended features: user/group management, archive, custom types
+    * Highly customizable within CMIS specification
+
+* **Enhanced Full-Text Search** (Apache Solr 9.x with Solr Cell)
+    * PDF, Microsoft Office (Word, Excel, PowerPoint)
+    * OpenDocument (Writer, Calc, Impress)
+    * HTML, XML, RTF, plain text
 
 * **NoSQL CouchDB backend**
-    * Simple document-based NoSQL database.
-    * Easy Database management and replication.
+    * Document-based storage with easy replication
+    * Simple database management
 
+## Etymology
 
-Etymology
-------
-"Nemaki" derives from a Japanese word "寝巻き" which means night clothes.
-You can relax and enjoy happy enterprise time as if you are lying on the couch in your room!
+"Nemaki" derives from the Japanese word "寝巻き" (pajamas/night clothes).
+Relax and enjoy happy enterprise time as if you are lying on the couch in your room!
 
+---
 
-## Jakarta EE 10 Development Environment
+## Quick Start (Docker Compose)
 
-NemakiWare supports modern Jakarta EE 10 development with Maven Jetty plugin for streamlined debugging and development.
+### Prerequisites
+- Docker and Docker Compose
+- 4GB+ available memory
 
-### Quick Start
+### 1. Build the Application
 
-**Prerequisites:**
+```bash
+# Build UI
+cd core/src/main/webapp/ui
+npm install
+npm run build
+
+# Build Core WAR
+cd ../../../..
+mvn clean package -f core/pom.xml -Pdevelopment -DskipTests -q
+
+# Copy WAR to Docker directory
+cp core/target/core.war docker/core/core.war
+```
+
+### 2. Start Services
+
+```bash
+cd docker
+docker compose -f docker-compose-simple.yml up -d --build
+```
+
+This starts:
+| Service | Port | Description |
+|---------|------|-------------|
+| CouchDB | 5984 | Document database |
+| Solr | 8983 | Full-text search engine |
+| Core | 8080 | CMIS server + React UI |
+
+### 3. Wait for Startup
+
+```bash
+# Wait for NemakiWare to be ready (approximately 60-90 seconds)
+curl -u admin:admin http://localhost:8080/core/atom/bedroom
+```
+
+### 4. Access the Application
+
+- **Web UI**: http://localhost:8080/core/ui/
+- **CMIS Atom Binding**: http://localhost:8080/core/atom/bedroom
+- **CMIS Browser Binding**: http://localhost:8080/core/browser/bedroom
+
+**Default credentials**: `admin` / `admin`
+
+### Stopping Services
+
+```bash
+cd docker
+docker compose -f docker-compose-simple.yml down
+```
+
+### Rebuilding After Code Changes
+
+```bash
+# Rebuild and redeploy (important: use --build --force-recreate)
+cp core/target/core.war docker/core/core.war
+cd docker
+docker compose -f docker-compose-simple.yml up -d --build --force-recreate core
+```
+
+---
+
+## Optional: Keycloak (SAML/OIDC Authentication)
+
+For external authentication support:
+
+```bash
+cd docker
+docker compose -f docker-compose.keycloak.yml up -d
+```
+
+Keycloak will be available at http://localhost:8088
+
+---
+
+## Development Environment (Jetty)
+
+For debugging and rapid development without Docker:
+
+### Prerequisites
 - Java 17
 - Maven 3.6+
 - Docker (for CouchDB only)
 
-**Setup:**
+### Setup
 
-1. **Start CouchDB (Docker)**
+1. **Start CouchDB**
    ```bash
    docker run -d --name couchdb-dev -p 5984:5984 \
      -e COUCHDB_USER=admin -e COUCHDB_PASSWORD=password \
      couchdb:3
    ```
 
-2. **Configure Java 17 Module System**
-   ```bash
-   export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
-   ```
-
-3. **Start Development Server**
+2. **Start Development Server**
    ```bash
    cd core
    ./start-jetty-dev.sh
    ```
-   
-   Or manually:
-   ```bash
-   export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
-   mvn jetty:run -Pjakarta -Djetty.port=8080
-   ```
 
-**Access Points:**
-- CMIS Service: `http://localhost:8080/core/atom/bedroom` (admin:admin)
-- Repository Info: `http://localhost:8080/core/atom/bedroom`
-- Folder Operations: `http://localhost:8080/core/atom/bedroom/children?id=e02f784f8360a02cc14d1314c10038ff`
+**Note**: This mode uses MockSolrUtil (search disabled) for simplified development.
 
-### Development Features
-
-- **Jakarta EE 10 Compatible**: Full support for modern Jakarta namespace
-- **Simplified Dependencies**: CouchDB-only Docker requirement
-- **Debug-Friendly**: Direct Maven execution with Jetty
-- **Fast Iteration**: Automatic code reloading
-- **Reduced Packaging Complexity**: Eliminates WAR deployment issues
-
-### Technical Details
-
-- **Runtime**: Jetty 11 with Jakarta EE 10
-- **Database**: CouchDB 3.x via Cloudant SDK
-- **Authentication**: Jakarta Servlet API compatible
-- **Search**: MockSolrUtil (disabled for development)
-- **Spring**: Version 6 with Jakarta EE support
-
-For complete setup instructions, see `JAKARTA-EE-QUICKSTART.md`.
+---
 
 ## Testing
 
-### TCK (Technology Compatibility Kit) Testing
+### CMIS TCK Tests
 
-NemakiWare includes CMIS 1.1 TCK tests to verify full specification compliance.
-
-**Quick TCK Test Execution:**
 ```bash
-# Run all TCK tests with automatic database cleanup
-./tck-test-clean.sh
-
-# Run specific test group (e.g., QueryTestGroup)
-./tck-test-clean.sh QueryTestGroup
-
-# Run specific test method
-./tck-test-clean.sh QueryTestGroup#queryLikeTest
+# Run TCK tests (requires Docker environment running)
+mvn test -Dtest=BasicsTestGroup,TypesTestGroup,ControlTestGroup,VersioningTestGroup \
+  -f core/pom.xml -Pdevelopment
 ```
 
-**What the test script provides:**
-- Automatic database cleanup before testing (prevents test data accumulation)
-- Docker container health verification
-- Comprehensive test execution with 90-minute timeout protection
-- Detailed performance and success rate reporting
+### Playwright E2E Tests
 
-**Important Notes:**
-- Always use the cleanup script for reliable test results
-- Test data accumulation can cause false failures (especially querySmokeTest)
-- Expected execution time: 5-40 minutes depending on test scope
-- Requires 3GB Java heap (configured in docker-compose-simple.yml)
+```bash
+cd core/src/main/webapp/ui
+npx playwright test --project=chromium
+```
 
-For detailed testing procedures and troubleshooting, see `CLAUDE.md` section "TCK Test Execution (Standard Procedure)".
+---
 
-License
-----------
+## Project Structure
+
+```
+NemakiWare/
+├── core/                    # CMIS server (Spring + OpenCMIS)
+│   └── src/main/webapp/ui/  # React SPA (TypeScript + Vite)
+├── docker/                  # Docker Compose configurations
+├── solr/                    # Solr search engine configuration
+└── common/                  # Shared utilities
+```
+
+## Technical Stack
+
+| Component | Technology |
+|-----------|------------|
+| Server | Tomcat 10.1 (Jakarta EE 10) |
+| Framework | Spring 6, Apache Chemistry OpenCMIS |
+| Database | CouchDB 3.x |
+| Search | Apache Solr 9.x |
+| UI | React 18, TypeScript, Vite 7, Ant Design 5 |
+| Java | 17 (required) |
+
+---
+
+## License
+
 Copyright (c) 2013-2026 aegif.
 
-NemakiWare is Open Source software and licensed under the `GNU Affero General Public License version 3`. You are welcome to change and redistribute it under certain conditions. For more information see the `legal/LICENSE` file.
+NemakiWare is Open Source software licensed under the **GNU Affero General Public License version 3**. See `legal/LICENSE` for details.
